--- a/sb-09-jwt/src/main/resources/static/index.html
+++ b/sb-09-jwt/src/main/resources/static/index.html
@@ -29,7 +29,7 @@
    <h1>JWT Spring Security Demo</h1>
 
    <div class="alert alert-danger" id="notLoggedIn">Not logged in!</div>
-
+   <button id="clearLocalStorage" type="submit" class="alert btn btn-default">clearLocalStorage</button>
    <div class="alert alert-info text-hidden" id="loggedIn"></div>
 
    <div class="row">
